limit to 10 turns

--- a/dummy-rl-game.html
+++ b/dummy-rl-game.html
@@ -44,7 +44,7 @@
 
 		</script>
 		<div>
-			非常无聊的RL游戏，你能做2个动作：左移和右移，每次移动后，系统会告诉你当前所处的状态（只有2个状态：左边和右边），同时会给你的动作一个奖励分数。请以尽量多的获得奖励分数为目标，试着找到一种移动策略吧！
+			非常无聊的RL游戏，你能做2个动作：左移和右移，每次移动后，系统会告诉你当前所处的状态（只有2个状态：左边和右边），同时会给你的动作一个奖励分数。请以最近10次操作尽量多的获得奖励分数为目标，试着找到一种移动策略吧！
 		</div>	
 		<div>
 			总奖励分数：<span id="return">0</span>
